# Fleek-GTM-Case-Study

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: part1_manchester_scrape.csv  part2_leads_and_customers.csv  real_manchester_shortlist.csv
output/: PART 1 - Which shops do I visit.xlsx  PART 2 - How do I reach them.csv  PART 2 - How do I reach them.xlsx  crm_cleaned.xlsx  crm_with_outreach.csv  crm_with_outreach.xlsx  manchester_results.xlsx  real_manchester_shortlist.xlsx
src/vintage_lead_engine/: __init__.py  city_priority.py  cli.py  cluster.py  crm_cleaning.py  enrichment.py  excel_output.py  outreach.py  outreach_content.py  qualify.py  tier.py
tests/: test_city_priority.py  test_cluster.py  test_crm_cleaning.py  test_enrichment.py  test_outreach_eligibility.py  test_qualify.py  test_regression_crm.py  test_regression_manchester.py  test_tier.py
