[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vintage-lead-engine"
version = "0.1.0"
description = "Qualify, tier, and geographically cluster vintage-clothing-shop leads from a Google Maps scrape."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "openpyxl>=3.1",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
parquet = ["pyarrow>=10"]
dev = ["pytest>=7"]

[project.scripts]
vintage-lead-engine = "vintage_lead_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
